oci/whoami/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: whoami
  annotations:
    linkerd.io/inject: enabled
