oci/whoami/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: whoami
  namespace: whoami
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /whoami
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: l5d-dst-override
                value: whoami.whoami.svc.cluster.local:80
      backendRefs:
        - name: whoami
          port: 80
